--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -16,8 +16,10 @@
     Share for ET-720
   </button>
 
+
   <app-product-alerts
-  [product]="product">
+  [product]="product" 
+  (notify)="onNotify()">
 </app-product-alerts>
 
 
